@@ -2845,6 +2845,7 @@ namespace aux {
 		// only tick the following once per second
 		if (now - m_last_second_tick < seconds(1)) return;
 
+		// remove undead peers that only have this list as their reference keeping them alive
 		std::vector<intrusive_ptr<peer_connection> >::iterator i = std::remove_if(
 			m_undead_peers.begin(), m_undead_peers.end(), boost::bind(&peer_connection::refcount, _1) < 2);
 		m_undead_peers.erase(i, m_undead_peers.end());
@@ -3271,9 +3272,9 @@ namespace aux {
 				if (m_next_connect_torrent == m_torrents.end())
 					m_next_connect_torrent = m_torrents.begin();
 
-				// if we have gone two whole loops without
+				// if we have gone a whole loop without
 				// handing out a single connection, break
-				if (steps_since_last_connect > num_torrents * 2) break;
+				if (steps_since_last_connect > num_torrents + 1) break;
 				// if there are no more free connection slots, abort
 				if (free_slots <= -m_half_open.limit()) break;
 				// if we should not make any more connections
@@ -4453,10 +4454,9 @@ namespace aux {
 	{
 		TORRENT_ASSERT(is_network_thread());
 
-		std::map<sha1_hash, boost::shared_ptr<torrent> >::iterator i
-			= m_torrents.find(info_hash);
+		torrent_map::iterator i = m_torrents.find(info_hash);
 #ifdef TORRENT_DEBUG
-		for (std::map<sha1_hash, boost::shared_ptr<torrent> >::iterator j
+		for (torrent_map::iterator j
 			= m_torrents.begin(); j != m_torrents.end(); ++j)
 		{
 			torrent* p = boost::get_pointer(j->second);
@@ -4490,7 +4490,7 @@ namespace aux {
 		, boost::function<bool(torrent_status const&)> const& pred
 		, boost::uint32_t flags) const
 	{
-		for (session_impl::torrent_map::const_iterator i
+		for (torrent_map::const_iterator i
 			= m_torrents.begin(), end(m_torrents.end());
 			i != end; ++i)
 		{
@@ -4537,7 +4537,7 @@ namespace aux {
 	{
 		std::vector<torrent_handle> ret;
 
-		for (session_impl::torrent_map::const_iterator i
+		for (torrent_map::const_iterator i
 			= m_torrents.begin(), end(m_torrents.end());
 			i != end; ++i)
 		{
@@ -4657,7 +4657,35 @@ namespace aux {
 		}
 #endif
 
+#if TORRENT_HAS_BOOST_UNORDERED
+		sha1_hash next_connect(0);
+		sha1_hash next_lsd(0);
+		sha1_hash next_dht(0);
+		if (m_next_connect_torrent != m_torrents.end())
+			next_connect = m_next_connect_torrent->first;
+		if (m_next_lsd_torrent != m_torrents.end())
+			next_lsd = m_next_lsd_torrent->first;
+		if (m_next_dht_torrent != m_torrents.end())
+			next_dht = m_next_dht_torrent->first;
+		float load_factor = m_torrents.load_factor();
+#endif
+
 		m_torrents.insert(std::make_pair(*ih, torrent_ptr));
+
+#if TORRENT_HAS_BOOST_UNORDERED
+		// if this insert made the hash grow, the iterators became invalid
+		// we need to reset them
+		if (m_torrents.load_factor() < load_factor)
+		{
+			// this indicates the hash table re-hashed
+			if (!next_connect.is_all_zeros())
+				m_next_connect_torrent = m_torrents.find(next_connect);
+			if (!next_lsd.is_all_zeros())
+				m_next_lsd_torrent = m_torrents.find(next_lsd);
+			if (!next_dht.is_all_zeros())
+				m_next_dht_torrent = m_torrents.find(next_dht);
+		}
+#endif
 		if (!params.uuid.empty() || !params.url.empty())
 			m_uuids.insert(std::make_pair(params.uuid.empty()
 				? params.url : params.uuid, torrent_ptr));
@@ -4665,9 +4693,12 @@ namespace aux {
 		if (m_alerts.should_post<torrent_added_alert>())
 			m_alerts.post_alert(torrent_added_alert(torrent_ptr->get_handle()));
 
-		// recalculate auto-managed torrents sooner
-		if ((params.flags && add_torrent_params::flag_auto_managed)
-			&& m_auto_manage_time_scaler > 1)
+		// recalculate auto-managed torrents sooner (or put it off)
+		// if another torrent will be added within one second from now
+		// we want to put it off again anyway. So that while we're adding
+		// a boat load of torrents, we postpone the recalculation until
+		// we're done adding them all (since it's kind of an expensive operation)
+		if (params.flags & add_torrent_params::flag_auto_managed)
 			m_auto_manage_time_scaler = 1;
 
 		return torrent_handle(torrent_ptr);
@@ -4699,7 +4730,7 @@ namespace aux {
 			if (j != m_uuids.end()) m_uuids.erase(j);
 		}
 
-		session_impl::torrent_map::iterator i =
+		torrent_map::iterator i =
 			m_torrents.find(tptr->torrent_file().info_hash());
 
 		// this torrent might be filed under the URL-hash
@@ -5783,7 +5814,7 @@ namespace aux {
 		{
 			TORRENT_ASSERT(false);
 		}
-		for (std::map<sha1_hash, boost::shared_ptr<torrent> >::const_iterator j
+		for (torrent_map::const_iterator j
 			= m_torrents.begin(); j != m_torrents.end(); ++j)
 		{
 			TORRENT_ASSERT(boost::get_pointer(j->second));
