@@ -1,3 +1,4 @@
+	* replaced std::map with boost::unordered_map for torrent list, to scale better with many torrents
 	* optimized piece picker
 	* optimized disk cache
 	* optimized .torrent file parsing
